CSS > Fix color contrast

--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -141,7 +141,7 @@
   color: #d14;
 }
 .highlight .na {
-  color: #008080;
+  color: #007a7a;
 }
 .highlight .bp {
   color: #999999;
@@ -154,7 +154,7 @@
   font-weight: bold;
 }
 .highlight .no {
-  color: #008080;
+  color: #007a7a;
 }
 .highlight .nd {
   color: #3c5d5d;
@@ -182,16 +182,16 @@
   color: #000080;
 }
 .highlight .vc {
-  color: #008080;
+  color: #007a7a;
 }
 .highlight .vg {
-  color: #008080;
+  color: #007a7a;
 }
 .highlight .vi {
-  color: #008080;
+  color: #007a7a;
 }
 .highlight .nv {
-  color: #008080;
+  color: #007a7a;
 }
 .highlight .ow {
   color: #000000;
